--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -4,6 +4,8 @@
 <div class="col-xs-12"> 
 <app-course-item 
 *ngFor="let courseEl of courses; let i = index" 
-[course]="courseEl"></app-course-item> 
+(mouseenter)="setHoveredRow(i)" (mouseleave)="setHoveredRow(i)" 
+[class.active]="i == selectedRow" [course]="courseEl"> 
+</app-course-item> 
 </div> 
-</div> 
+</div>
