--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="container"> 
   <div class="row"> 
     <div class="col-md-12"> 
-      <app-course-list></app-course-list> 
+      <app-contact></app-contact> 
     </div> 
   </div> 
 </div>
