--- a/src/app/courses/course-list/course-item/course-item.component.html
+++ b/src/app/courses/course-list/course-item/course-item.component.html
@@ -1,3 +1,8 @@
+<a 
+style="cursor: pointer;" 
+[routerLink]="[course.id]" 
+routerLinkActive="active" 
+class="list-group-item clearfix"> 
 <div class="list-group-item clearfix"> 
     <div class="pull-left"> 
     <h4 class="list-group-item-heading">{{ course.name}}</h4> 
@@ -11,3 +16,4 @@
     style="max-height: 50px;"> 
     </span> 
     </div>
+</a>
